RG-1830 select's button vertical align fixed

--- a/components/select/select.css
+++ b/components/select/select.css
@@ -144,6 +144,7 @@
   width: 100%;
 
   text-align: left;
+  vertical-align: baseline;
 }
 
 .buttonValueOpen {
